@@ -16,6 +16,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
+import static com.api.ouimouve.enumeration.VehicleCategory.CITADINE_POLYVALENTE;
+import static com.api.ouimouve.enumeration.VehicleCategory.MINI_CITADINE;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
@@ -46,9 +48,9 @@ public class ModelServiceTest {
         model.setModelName("Model3");
         model.setMark("Tesla");
         model.setMotorType("Electric");
-        model.setCategory(2);
+        model.setCategory(MINI_CITADINE);
         model.setCO2(0);
-        model.setPlacesModel(5);
+        model.setSeatsModel(5);
         model.setPhotoURL("http://example.com/photo.jpg");
 
         modelDto = new ModelDto();
@@ -56,9 +58,9 @@ public class ModelServiceTest {
         modelDto.setModelName("Model3");
         modelDto.setMark("Tesla");
         modelDto.setMotorType("Electric");
-        modelDto.setCategory(2);
+        modelDto.setCategory(CITADINE_POLYVALENTE);
         modelDto.setCO2(0);
-        modelDto.setPlacesModel(5);
+        modelDto.setSeatsModel(5);
         modelDto.setPhotoURL("http://example.com/photo.jpg");
 
         models = new ArrayList<>();
@@ -77,7 +79,7 @@ public class ModelServiceTest {
         // Then
         assertThat(result).isNotNull();
         assertThat(result).hasSize(1);
-        assertThat(result.get(0)).isEqualTo(modelDto);
+        assertThat(result.getFirst()).isEqualTo(modelDto);
         verify(modelRepository, times(1)).findAll();
     }
 
